--- a/oneyear/css/mb-comingsoon-iceberg.css
+++ b/oneyear/css/mb-comingsoon-iceberg.css
@@ -1,5 +1,5 @@
 
-@import url(http://fonts.useso.com/css?family=Roboto:400,300,700,900);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,700,900);
 .counter-group {display: inline-block;}
 
 .counter-group:before,
