--- a/oneyear/css/style.css
+++ b/oneyear/css/style.css
@@ -1,8 +1,8 @@
 /*
 
 */
-@import url(http://fonts.useso.com/css?family=Rochester);
-@import url(http://fonts.useso.com/css?family=Great+Vibes);
+@import url(http://fonts.googleapis.com/css?family=Rochester);
+@import url(http://fonts.googleapis.com/css?family=Great+Vibes);
 /* ---------------------------------------------------------------------------- */
 /* ------------------------------------Reset----------------------------------- */
 /* ---------------------------------------------------------------------------- */
